add maze-generation-visualization submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/gist/coderain"]
 	path = src/gist/coderain
 	url = https://gist.github.com/5aeb9672783d06e2ff9ec2e1aa4c2427.git
+[submodule "src/demo/maze-generation-visualization"]
+	path = src/demo/maze-generation-visualization
+	url = https://github.com/halfminami/maze-generation-visualization.git
