--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": ["src/demo/maze-generation-visualization/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
