--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build-maze":"npm ci --prefix src/demo/maze-generation-visualization/; npm run build --prefix src/demo/maze-generation-visualization/; mkdir -p public/demo/maze-generation-visualization; mv -f src/demo/maze-generation-visualization/build/* public/demo/maze-generation-visualization",
+    "build-maze":"npm ci --prefix src/demo/maze-generation-visualization/ && npm run build --prefix src/demo/maze-generation-visualization/; mkdir -p public/demo/maze-generation-visualization; mv -f src/demo/maze-generation-visualization/build/* public/demo/maze-generation-visualization",
     "build-submodule":"npm run build-maze",
     "build-main":"tsc && vite build",
     "build": "npm run build-submodule; npm run build-main",
